DB Migration Initial Changes.

--- a/ReleaseManagement/ReleaseManagement.Mvvm/appsettings.json
+++ b/ReleaseManagement/ReleaseManagement.Mvvm/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ReleaseManagement.Mvvm-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ReleaseManagementDBConnection": "Server=.;Database=ReleaseManagementIdentityDB;user id=sa;password=sa;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
       "LogLevel": {
