--- a/ReleaseManagement/ReleaseManagement.Mvvm/ClientApp/src/tsconfig.app.json
+++ b/ReleaseManagement/ReleaseManagement.Mvvm/ClientApp/src/tsconfig.app.json
@@ -7,5 +7,14 @@
   "exclude": [
     "src/test.ts",
     "**/*.spec.ts"
+  ],
+  "styles": [
+    "node_modules/bootstrap/dist/css/bootstrap.min.css",
+    "styles.css"
+  ],
+  "scripts": [
+    "node_modules/jquery/dist/jquery.min.js",
+    "node_modules/popper.js/dist/umd/popper.min.js",
+    "node_modules/bootstrap/dist/js/bootstrap.min.js"
   ]
 }
