Initial Commit of Infrastructure.Data Layer Project, Update MVW for ReleaseManagementDBContext

--- a/ReleaseManagement/ReleaseManagement.Mvvm/appsettings.json
+++ b/ReleaseManagement/ReleaseManagement.Mvvm/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ReleaseManagementDBConnection": "Server=.;Database=ReleaseManagementIdentityDB;user id=sa;password=sa;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ReleaseManagementIdentityDBConnection": "Server=.;Database=ReleaseManagementIdentityDB;user id=sa;password=sa;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ReleaseManagementMainDBConnection": "Server=.;Database=ReleaseManagementMainDB;user id=sa;password=sa;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
       "LogLevel": {
