--- a/ReleaseManagement/ReleaseManagement.Application/ReleaseManagement.Application.csproj
+++ b/ReleaseManagement/ReleaseManagement.Application/ReleaseManagement.Application.csproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="ViewModels\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ReleaseManagement.Domain\ReleaseManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
